Closed Bug 1796392 Opened 2 years ago Closed 2 years ago

Firefox 108.0a1 20221019211615 on Wayland froze frequently

Categories

(Core :: Widget: Gtk, defect)

Firefox 108
defect

Tracking

()

VERIFIED FIXED
108 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox106 --- unaffected
firefox107 --- unaffected
firefox108 --- verified

People

(Reporter: matt.fagnani, Assigned: stransky)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:

I ran Firefox 108.0a1 20221019211615 on Wayland in Plasma 5.25.5 in a Fedora 37 KDE Plasma installation. I had previously enabled the menu bar. I clicked on the Bookmarks menu. I moved the cursor over bookmarks folders and bookmarks. I stopped moving the cursor over certain bookmarks. I also tried to edit preferences in about:config at another time.

Actual results:

The bookmark's tooltip didn't appear. Firefox's interface froze for 15 seconds or more. Clicking on different menus had no visible effect. Clicking on the + button to create a new tab didn't show a new tab though the title bar sometimes changed. Clicking on the back arrow button didn't change the loaded page though the title bar sometimes changed. Clicking on a page had no effect. Tooltips on a page didn't show up. Clicking on the address bar didn't have an effect. When I tried to edit a preference in about:config at another time, no change was shown to the field and I couldn't change the preference.

This problem didn't occur with 108.0a1 20221019083142 or earlier. I ran mozregression --good 2022-10-18 --bad 2022-10-19 -p ~/.mozilla/firefox/z8d4nvrc.default-nightly --profile-persistence reuse --persist /tmp/mozregression

I bisected whether moving the cursor over a bookmark and stopping it made Firefox freeze after no tooltip was shown. The first bad revision was b264e828b2b83648e4df877c2822a44cde47f13b for Bug 1795849 [Linux] Chancel D&D operation on Wayland and XWayland when D&D source window is closing

9:12.07 INFO: Narrowed integration regression window from [76894ab2, 38525e92] (3 builds) to [76894ab2, b264e828] (2 builds) (~1 steps left)
9:12.07 INFO: No more integration revisions, bisection finished.
9:12.07 INFO: Last good revision: 76894ab27b1cd52e7ade50572d3c77a4cc2fbfe4
9:12.07 INFO: First bad revision: b264e828b2b83648e4df877c2822a44cde47f13b
9:12.07 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=76894ab27b1cd52e7ade50572d3c77a4cc2fbfe4&tochange=b264e828b2b83648e4df877c2822a44cde47f13b

Expected results:

Firefox should have remained responsive.

Regressed by: 1795849

:stransky, since you are the author of the regressor, bug 1795849, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

Flags: needinfo?(stransky)

I can reproduce this with the same STR and regression range as comment #1 on GNOME 43/Wayland, (MOZ_ENABLE_WAYLAND=1).

This also happens when trying to open a tab, the website content area doesn't freeze but the menu bar, address bar, context menus etc. freezes.

If it helps here's the backtrace https://0x0.st/ow5f.txt and crash report https://crash-stats.mozilla.org/report/index/b034c078-3340-4199-a7bc-cef480221020 (This is after the freeze happened I killed it with kill -11)

I have been chatting for the last few hours on #nightly:mozilla.org about this. It killed my Nightly which I use as my main browser.
I had to replace the folder with the one from Build ID 20220918094414 (2022-09-18) to make the Nightly work again.

Ubuntu 22.04.1 LTS Wayland

Sure, will look at it.

108.0a1 20221019211615 usually froze the second time I moved the cursor over a bookmark, toolbar button such as the Reload current page, Home, or the left arrow, or parts of a page and stopped moving it for a second such that a tooltip would normally be shown. No tooltips were shown with 108.0a1 20221019211615. I wonder if this problem happening the second time a tooltip wasn't shown might be related to the drag and drop related freeze and the fix in Bug 1795849. Thanks.

Yes, looks like tooltip related.

Flags: needinfo?(stransky)
Assignee: nobody → stransky
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
See Also: → 1796534
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/0cb63bb64e74
[Wayland] Don't assert if there's tooltip in popup hierarchy r=emilio
Pushed by ctuns@mozilla.com:
https://hg.mozilla.org/mozilla-central/rev/ca2873779214
[Wayland] Don't assert if there's tooltip in popup hierarchy r=emilio
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch

Set release status flags based on info from the regressing bug 1795849

Flags: qe-verify+

I tried to reproduce the issue reported in comment 0 using an old Nightly build from 2022-10-20 (Wayland enabled) but I could not reproduce it, I never experienced any freeze or not opening menus after using the browser for more than 30 minutes. I did use a VM with Fedora 37 KDE Plasma and maybe that's why I was unable to reproduce there.
Anyway, Matt could you be so kind and verify that using Firefox 108.0b5 this is no longer reproducible for you? https://archive.mozilla.org/pub/firefox/candidates/108.0b5-candidates/build1/linux-x86_64/en-US/

Flags: needinfo?(matt.fagnani)

(In reply to Bogdan Maris [:bogdan_maris], Release Desktop QA from comment #15)

I tried to reproduce the issue reported in comment 0 using an old Nightly build from 2022-10-20 (Wayland enabled) but I could not reproduce it, I never experienced any freeze or not opening menus after using the browser for more than 30 minutes. I did use a VM with Fedora 37 KDE Plasma and maybe that's why I was unable to reproduce there.
Anyway, Matt could you be so kind and verify that using Firefox 108.0b5 this is no longer reproducible for you? https://archive.mozilla.org/pub/firefox/candidates/108.0b5-candidates/build1/linux-x86_64/en-US/

This problem was fixed in 108.0a1 20221020215126 by https://hg.mozilla.org/mozilla-central/rev/0cb63bb64e74 108.0b5 on Wayland didn't freeze when I moved the cursor over bookmarks or buttons and stopped it multiple times, and the tooltips were shown normally. 108.0b5 isn't affected by this problem.

Flags: needinfo?(matt.fagnani)

(In reply to Matt Fagnani from comment #16)

(In reply to Bogdan Maris [:bogdan_maris], Release Desktop QA from comment #15)

I tried to reproduce the issue reported in comment 0 using an old Nightly build from 2022-10-20 (Wayland enabled) but I could not reproduce it, I never experienced any freeze or not opening menus after using the browser for more than 30 minutes. I did use a VM with Fedora 37 KDE Plasma and maybe that's why I was unable to reproduce there.
Anyway, Matt could you be so kind and verify that using Firefox 108.0b5 this is no longer reproducible for you? https://archive.mozilla.org/pub/firefox/candidates/108.0b5-candidates/build1/linux-x86_64/en-US/

This problem was fixed in 108.0a1 20221020215126 by https://hg.mozilla.org/mozilla-central/rev/0cb63bb64e74 108.0b5 on Wayland didn't freeze when I moved the cursor over bookmarks or buttons and stopped it multiple times, and the tooltips were shown normally. 108.0b5 isn't affected by this problem.

Thanks, I'll go ahead and close this as verified fixed based on your testing done in https://hg.mozilla.org/mozilla-central/rev/0cb63bb64e74.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: