Bug 1796392 [Wayland] Don't assert if there's tooltip in popup hierarchy r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D159843